--- a/style.css
+++ b/style.css
@@ -205,3 +205,20 @@ margin-bottom:25px;
 
 
 }
+
+@media only screen and (max-width: 874px) {
+    .register_border{
+	width:60%;
+	}
+	
+	.t1,.l1,.b1{
+	font-size:20px;
+	
+	}
+	
+	.h1{
+	font-size:20px;
+	}
+    
+    
+}
